# 101-regex-pdf

./: .env-example  Aula de Expressões Regulares (Regex).md  Makefile  README.md  pyproject.toml  regex_basic.md
docker/: Dockerfile  docker-compose.yml
src/: __init__.py  pdf_viz.py  table_pdf_extractor.py  text_pdf_extractor.py
src/configs/rules/: notas.py
src/configs/tools/: queue.py
src/configs/tools/aws/: s3.py  sqs.py
src/files/csv/: corretora_jornada_de_dados (15).csv  corretora_jornada_de_dados (15)_small.csv
